# PortcullisSSH

./: .gitignore  PLAN.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
deploy/: portcullis.service  ssh-bfd.service
portcullis/: __main__.py  alerts.py  app.py  audit.py  cli.py  config.py  detector.py  escalation.py  parser.py
portcullis/firewall/: __init__.py  dryrun.py  iptables.py
ssh_bfd/: __main__.py  alerts.py  app.py  cli.py  config.py  detector.py  escalation.py  monitor.py  reputation.py
ssh_bfd/firewall/: __init__.py  base.py  dryrun.py  iptables.py
tests/: test_alerts_audit.py  test_config_cli.py  test_detector.py  test_escalation.py  test_firewall_dryrun.py  test_monitor.py  test_parser.py  test_reputation.py
